--- a/Mac/ssh/config
+++ b/Mac/ssh/config
@@ -1,96 +1,6 @@
 Host gitlab.com
-HostName gitlab.com
-IdentityFile ~/.ssh/id_rsa_gitlab_com
-
-Host outsourcing
-    HostName 3.0.51.218
-    User admin
-    IdentityFile ~/.ssh/outsourcing-key.pem
-
-Host 13.212.37.230
-    User admin
-    IdentityFile ~/.ssh/kkfarm-2017.pem
-
-Host sftp
-    HostName 52.220.226.115
-    User admin
-    IdentityFile ~/.ssh/kkfarm-2017.pem
-
-Host metabase
-    HostName 52.220.15.26
-    User admin
-    IdentityFile ~/.ssh/kkfarm-2017.pem
-
-Host stage
-    HostName 13.228.169.168
-    User admin
-    IdentityFile ~/.ssh/kkfarm-2017.pem
-
-Host dev-web-1
-    HostName 18.136.228.7
-    User admin
-    IdentityFile ~/.ssh/kkfarm-2017.pem
-
-Host dev-worker-1
-    HostName 13.229.176.165
-    User admin
-    IdentityFile ~/.ssh/kkfarm-2017.pem
-
-Host web-1
-    HostName 54.151.142.142
-    User admin
-    IdentityFile ~/.ssh/kkfarm-2017.pem
-
-Host web-2
-    HostName 54.179.126.195
-    User admin
-    IdentityFile ~/.ssh/kkfarm-2017.pem
-
-Host inspector
-    HostName 54.179.230.187
-    User admin
-    IdentityFile ~/.ssh/kkfarm-2017.pem
-
-Host worker-1
-    HostName 52.221.121.238
-    User admin
-    IdentityFile ~/.ssh/kkfarm-2017.pem
-
-Host worker-2
-    HostName 18.136.38.8
-    User admin
-    IdentityFile ~/.ssh/kkfarm-2017.pem
-
-Host worker-3
-    HostName 13.212.22.38
-    User admin
-    IdentityFile ~/.ssh/kkfarm-2017.pem
-
-Host fuckedupsummer-1
-    HostName 18.139.71.163
-    User admin
-    IdentityFile ~/.ssh/kkfarm-2017.pem
-
-Host official-site
-    HostName 13.212.248.97
-    User admin
-    IdentityFile ~/.ssh/kkfarm-2017.pem
-
-Host agoo
-    HostName 54.151.215.123
-    User admin
-    IdentityFile ~/.ssh/kkfarm-2017.pem
-
-Host funkie
-    HostName 18.139.167.3
-    User admin
-    IdentityFile ~/.ssh/kkfarm-2017.pem
-
-Host kkbox-rdc
-  HostName i-02748057251607112
-  User ubuntu
-  Identityfile	~/.ssh/id_rsa_kfa
-  ProxyCommand sh -c "aws ssm start-session --target %h --document-name AWS-StartSSHSession --parameters 'portNumber=%p' --region us-west-2"
+  HostName gitlab.com
+  IdentityFile ~/.ssh/SSH-Thingnario.pub
 
 Host *
   IdentityAgent "~/Library/Group Containers/2BUA8C4S2C.com.1password/t/agent.sock"
